Added Photo and Camera Privacy variable setting
Allows for specifying both NSPhotoLibraryUsageDescription and NSCameraUsageDescription from plugin preferences.

--- a/plugin.xml
+++ b/plugin.xml
@@ -56,7 +56,18 @@
         <framework src="Security.framework" />
         <framework src="UIKit.framework" />
         <framework src="libc++.dylib" />
-
+	    
+	<!-- ios 10+ camera usage description -->
+        <preference name="CARD_IO_CAMERA_USAGE_DESCRIPTION" default="${EXECUTABLE_NAME} Would like to use your camera to scan credit cards." />
+        <config-file target="*-Info.plist" parent="NSCameraUsageDescription">
+         <string>$CARD_IO_CAMERA_USAGE_DESCRIPTION</string>
+        </config-file>
+	    
+	<!-- ios 10+ camera usage description -->
+        <preference name="CARD_IO_PHOTO_LIBRARY_USAGE_DESCRIPTION" default="${EXECUTABLE_NAME} Would like to use your camera to scan credit cards." />
+        <config-file target="*-Info.plist" parent="NSPhotoLibraryUsageDescription">
+         <string>$CARD_IO_PHOTO_LIBRARY_USAGE_DESCRIPTION</string>
+        </config-file>
     </platform>
 
     <!-- android -->
