--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/hvaughan3/card.io-Cordova-Plugin.git"
+    "url": "git+ssh://git@github.com/hvaughan3/cordova-plugin-card-io.git"
   },
   "keywords": [
     "card.io",
@@ -33,9 +33,9 @@
     "jshint": "^2.6.0"
   },
   "bugs": {
-    "url": "https://github.com/hvaughan3/card.io-Cordova-Plugin/issues"
+    "url": "https://github.com/hvaughan3/cordova-plugin-card-io/issues"
   },
-  "homepage": "https://github.com/card-io/card.io-Cordova-Plugin#readme",
+  "homepage": "https://github.com/hvaughan3/cordova-plugin-card-io#readme",
   "directories": {},
   "readme": "ERROR: No README data found!"
 }
